force-app/main/default/objects/Quote_Product__c/Quote_Product__c.object-meta.xml
<CustomObject>
    <description>The distinct products that have rate plans associated to the quote</description>
    <label>Quote Product</label>
    <nameField>
        <label>Quote Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>