force-app/main/default/objects/Quote_Product__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>The action taken, to send to provisioning</description>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Action</fullName>
            </value>
            <value>
                <fullName>Activate</fullName>
            </value>
            <value>
                <fullName>Deactivate</fullName>
            </value>
            <value>
                <fullName>Reactivate</fullName>
            </value>
            <value>
                <fullName>Softlock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>