force-app/main/default/objects/Quote_Product__c/fields/Amendment_Type__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Type__c</fullName>
    <label>Amendment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NewProduct</fullName>
            </value>
            <value>
                <fullName>RemoveProduct</fullName>
            </value>
            <value>
                <fullName>UpdateProduct</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>TermsAndConditions</fullName>
            </value>
            <value>
                <fullName>NewSubscription</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>