force-app/main/default/objects/Quote_Product__c/fields/Forecasted_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Live_Date__c</fullName>
    <label>Forecasted Live Date</label>
    <type>Date</type>
</CustomField>