force-app/main/default/objects/Quote_Product__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Notes for provisioning team</description>
    <inlineHelpText>Notes for provisioning team</inlineHelpText>
    <label>Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>