force-app/main/default/objects/Quote_Product__c/fields/Product_Rate_Plan__c.field-meta.xml
<CustomField>
    <fullName>Product_Rate_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Rate Plan</label>
    <referenceTo>zqu__ProductRatePlan__c</referenceTo>
    <relationshipLabel>Quote Products</relationshipLabel>
    <relationshipName>Quote_Products</relationshipName>
    <type>Lookup</type>
</CustomField>