force-app/main/default/objects/Quote_Product__c/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <formula>ZProduct__r.zqu__SKU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProductId</label>
    <type>Text</type>
</CustomField>