force-app/main/default/objects/Quote_Product__c/fields/PRPCImplementationValue__c.field-meta.xml
<CustomField>
    <fullName>PRPCImplementationValue__c</fullName>
    <label>PRPCImplementationValue</label>
    <length>50</length>
    <type>Text</type>
</CustomField>