force-app/main/default/objects/Quote_Product__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <description>The parent quote record</description>
    <inlineHelpText>The parent quote record</inlineHelpText>
    <label>Quote</label>
    <referenceTo>zqu__Quote__c</referenceTo>
    <relationshipLabel>Quote Products</relationshipLabel>
    <relationshipName>Quote_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>