force-app/main/default/objects/Quote_Product__c/fields/Quote_Rate_Plan__c.field-meta.xml
<CustomField>
    <fullName>Quote_Rate_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Rate Plan</label>
    <referenceTo>zqu__QuoteRatePlan__c</referenceTo>
    <relationshipLabel>Quote Products</relationshipLabel>
    <relationshipName>Quote_Products</relationshipName>
    <type>Lookup</type>
</CustomField>