force-app/main/default/objects/Quote_Product__c/fields/ReportingOnlySalesperson__c.field-meta.xml
<CustomField>
    <fullName>ReportingOnlySalesperson__c</fullName>
    <formula>Quote_Rate_Plan__r.Salesperson__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Only Salesperson</label>
    <type>Text</type>
</CustomField>