force-app/main/default/objects/Quote_Product__c/fields/Required_SPP_Category__c.field-meta.xml
<CustomField>
    <fullName>Required_SPP_Category__c</fullName>
    <label>Required SPP Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Online Statements</fullName>
            </value>
            <value>
                <fullName>Check Imaging</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Application - Create Your Own Page SSO</fullName>
            </value>
            <value>
                <fullName>FI Application</fullName>
            </value>
            <value>
                <fullName>Application - Mobile SSO</fullName>
            </value>
            <value>
                <fullName>Deposit Image</fullName>
            </value>
            <value>
                <fullName>PFM</fullName>
            </value>
            <value>
                <fullName>Remote Deposit</fullName>
            </value>
            <value>
                <fullName>Application - Widget SSO</fullName>
            </value>
            <value>
                <fullName>Credit Cards</fullName>
            </value>
            <value>
                <fullName>To Be Classified</fullName>
            </value>
            <value>
                <fullName>Check Reorder</fullName>
            </value>
            <value>
                <fullName>BillPay</fullName>
            </value>
            <value>
                <fullName>Lending</fullName>
            </value>
            <value>
                <fullName>Wire Transfer - Real Time</fullName>
            </value>
            <value>
                <fullName>Lender Application Interface</fullName>
            </value>
            <value>
                <fullName>Wireless</fullName>
            </value>
            <value>
                <fullName>Lender Servicing and Disbursement Interf</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Funds Transfer</fullName>
            </value>
            <value>
                <fullName>Secure Support</fullName>
            </value>
            <value>
                <fullName>Forms</fullName>
            </value>
            <value>
                <fullName>Lender Servicing Interface</fullName>
            </value>
            <value>
                <fullName>Interface</fullName>
            </value>
            <value>
                <fullName>Brokerage</fullName>
            </value>
            <value>
                <fullName>File Mover</fullName>
            </value>
            <value>
                <fullName>Mortgage</fullName>
            </value>
            <value>
                <fullName>Account Aggregation</fullName>
            </value>
            <value>
                <fullName>Lender Doc Prep Interface</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>