force-app/main/default/objects/Quote_Product__c/fields/SKUandPRPCID__c.field-meta.xml
<CustomField>
    <fullName>SKUandPRPCID__c</fullName>
    <description>This field is used to store SKU +PRPC id while QP creation</description>
    <label>PRPCId</label>
    <length>250</length>
    <type>Text</type>
</CustomField>