force-app/main/default/objects/Quote_Product__c/fields/Solution_Provider_Product__c.field-meta.xml
<CustomField>
    <fullName>Solution_Provider_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relationship to the Solution Provider product</description>
    <inlineHelpText>Relationship to the Solution Provider product</inlineHelpText>
    <label>Solution Provider Product</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>6 AND ((4 AND 5 AND 1) OR (4 AND 3 AND 1 AND 2))</booleanFilter>
        <filterItems>
            <field>$Source.Required_SPP_Category__c</field>
            <operation>equals</operation>
            <valueField>Solution_Provider_Product__c.Solution_Provider_Product_Category__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Required_SPP_Interface__c</field>
            <operation>equals</operation>
            <valueField>Solution_Provider_Product__c.Interface_Type__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Required_SPP_Interface__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>$Source.Required_SPP_Category__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>$Source.Required_SPP_Interface__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>Solution_Provider_Product__c.Internal_Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Solution_Provider_Product__c</referenceTo>
    <relationshipLabel>Quote Products</relationshipLabel>
    <relationshipName>Quote_Products</relationshipName>
    <type>Lookup</type>
</CustomField>