force-app/main/default/objects/Quote_Product__c/fields/ZProduct__c.field-meta.xml
<CustomField>
    <fullName>ZProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Z-product record</description>
    <inlineHelpText>Related Z-product record</inlineHelpText>
    <label>ZProduct</label>
    <referenceTo>zqu__ZProduct__c</referenceTo>
    <relationshipLabel>Quote Products</relationshipLabel>
    <relationshipName>Quote_Products</relationshipName>
    <type>Lookup</type>
</CustomField>