force-app/main/default/objects/Quote_Product__c/validationRules/Make_Completed_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Make_Completed_Required</fullName>
    <active>true</active>
    <description>Make Completed_Date__c required if ImplementationStatus__c is Complete - Update Billing</description>
    <errorConditionFormula>AND( ISPICKVAL( ImplementationStatus__c , &apos;Complete - Update Billing&apos;), ISBLANK(Completed_Date__c) )</errorConditionFormula>
    <errorDisplayField>ImplementationStatus__c</errorDisplayField>
    <errorMessage>Completed Date is required if Implementation Status is selected as Complete - Update Billing</errorMessage>
</ValidationRule>